# mcdk-mcp-tracy

./: LICENSE  README.md  pyproject.toml
skills/mcdk-tracy-profiling/: SKILL.md
src/mcdk_mcp_tracy/: __init__.py  __main__.py  config.py  errors.py  mcdk_client.py  server.py  state.py
src/mcdk_mcp_tracy/analysis/: __init__.py  diff.py  store.py
src/mcdk_mcp_tracy/profiler/: __init__.py  execinject.py  native.py  operations.py  snippets.py
src/mcdk_mcp_tracy/tools/: __init__.py  _common.py  register_jankfps.py  register_native.py  register_query.py  register_status.py
tests/: test_config.py  test_diff.py  test_native.py  test_operations.py  test_parse.py  test_snippets.py  test_store.py
